5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1643_1053.log
== TEST (2019-04-08 18:49:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=float(input("digite o nome do patrono:")
if(patrono==cervo):
	mensagem("cervo eh patrono do herry porter")
else:
	mensagem("nao eh patrono do harry porter" )
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if(patrono==cervo):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:49:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=float(input("digite o nome do patrono:")
if(patrono==cervo)
	mensagem("cervo eh patrono do herry porter")
else:
	mensagem("nao eh patrono do harry porter" )
print(mensagem)
-- ERROR:
File "XXXX", line 6
    mensagem("cervo eh patrono do herry porter")
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:49:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=float(input("digite o nome do patrono:")
if(patrono==cervo):
	mensagem=("cervo eh patrono do herry porter")
else:
	mensagem=("nao eh patrono do harry porter" )
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if(patrono==cervo):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:50:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=float(input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem=("cervo eh patrono do herry porter")
else:
	mensagem=("nao eh patrono do harry porter" )
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if(patrono=="cervo"):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:50:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=float(input("digite o nome do patrono:")
if(patrono=="cervo")
	mensagem=("cervo eh patrono do herry porter")
else:
	mensagem=("nao eh patrono do harry porter" )
print(mensagem)
-- ERROR:
File "XXXX", line 6
    mensagem=("cervo eh patrono do herry porter")
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:50:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=float(input("digite o nome do patrono:")
if(patrono=="cervo")
	mensagem=("cervo eh patrono do herry porter")
else:
	mensagem=("nao eh patrono do harry porter" )
print(mensagem.lower())
-- ERROR:
File "XXXX", line 6
    mensagem=("cervo eh patrono do herry porter")
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:50:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=float(input("digite o nome do patrono:")
if(patrono=="cervo")
	mensagem="cervo eh patrono do herry porter"
else:
	mensagem=("nao eh patrono do harry porter" )
print(mensagem.lower())
-- ERROR:
File "XXXX", line 6
    mensagem="cervo eh patrono do herry porter"
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:50:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=float(input("digite o nome do patrono:")
if(patrono=="cervo")
	mensagem= "cervo eh patrono do herry porter"
else:
	mensagem=("nao eh patrono do harry porter" )
print(mensagem.lower())
-- ERROR:
File "XXXX", line 6
    mensagem= "cervo eh patrono do herry porter"
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:51:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=float(input("digite o nome do patrono:")
if(patrono=="cervo")
	mensagem = "cervo eh patrono do herry porter"
else:
	mensagem=("nao eh patrono do harry porter" )
print(mensagem.lower())
-- ERROR:
File "XXXX", line 6
    mensagem = "cervo eh patrono do herry porter"
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:51:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo")
	mensagem= "cervo eh patrono do herry porter"
else:
	mensagem=("nao eh patrono do harry porter" )
print(mensagem.lower())
-- ERROR:
File "XXXX", line 5
    if(patrono=="cervo")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:52:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do herry porter"
else:
	mensagem=("nao eh patrono do harry porter" )
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono do herry porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:52:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do herry porter"
else:
	mensagem=("nao eh patrono do harry porter" )
print(mensagem.lower())
-- EXECUTION TIME:
0.284675
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do herry porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do harry porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:52:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do herry porter"
else:
	mensagem=("nao eh patrono do harry porter" )
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono do herry porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:52:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do herry porter"
else:
	mensagem=("nao eh patrono do harry porter" )
print(mensagem.lower())
-- EXECUTION TIME:
0.210007
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do herry porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do harry porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:52:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do herry porter"
else:
	mensagem=("nao eh patrono do harry porter" )
print(mensagem)
-- OUTPUT:
cervo eh patrono do herry porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:52:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do herry porter"
else:
	mensagem=("nao eh patrono do harry porter" )
print(mensagem)
-- EXECUTION TIME:
0.156418
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do herry porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do harry porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:53:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do herry porter"
else:
	mensagem=patrono+"nao eh patrono do harry porter" )
print(mensagem)
-- ERROR:
File "XXXX", line 8
    mensagem=patrono+"nao eh patrono do harry porter" )
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:53:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do herry porter"
else:
	mensagem=patrono+"nao eh patrono do harry porter" 
print(mensagem)
-- OUTPUT:
cervo eh patrono do herry porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:53:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do herry porter"
else:
	mensagem=patrono+"nao eh patrono do harry porter" 
print(mensagem)
-- EXECUTION TIME:
0.285362
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do herry porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do harry porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:54:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do herry porter"
else:
	mensagem=patrono+"nao eh patrono do harry porter" 
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono do herry porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:54:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do herry porter"
else:
	mensagem=patrono+"nao eh patrono do harry porter" 
print(mensagem.lower())
-- EXECUTION TIME:
0.19963
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do herry porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do harry porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:54:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do herry porter"
else:
	mensagem=patrono+"nao eh patrono do harry porter" 
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono do herry porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:54:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do herry porter"
else:
	mensagem=patrono+"nao eh patrono do harry porter" 
print(mensagem.lower())
-- EXECUTION TIME:
0.144901
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do herry porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do harry porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:54:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do herry porter"
else:
	mensagem=patrono+"nao eh patrono do harry porter" 
print(mensagem)
-- OUTPUT:
cervo eh patrono do herry porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:54:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do herry porter"
else:
	mensagem=patrono+"nao eh patrono do harry porter" 
print(mensagem)
-- EXECUTION TIME:
0.215438
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do herry porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do harry porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:57:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Herry Porter"
else:
	mensagem=patrono+"nao eh patrono do Harry Porter" 
print(mensagem)
-- OUTPUT:
cervo eh patrono do Herry Porter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:57:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Herry Porter"
else:
	mensagem=patrono+"nao eh patrono do Harry Porter" 
print(mensagem)
-- EXECUTION TIME:
0.17573
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Herry Porter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Porter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:57:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Herry Potter"
else:
	mensagem=patrono+"nao eh patrono do Harry Potter" 
print(mensagem)
-- OUTPUT:
cervo eh patrono do Herry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:58:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Herry Potter"
else:
	mensagem=patrono+"nao eh patrono do Harry Potter" 
print(mensagem)
-- EXECUTION TIME:
0.217523
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Herry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:58:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Herry Potter"
else:
	mensagem=patrono + "nao eh patrono do Harry Potter" 
print(mensagem)
-- OUTPUT:
cervo eh patrono do Herry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:59:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Herry Potter"
else:
	mensagem=patrono + "nao eh patrono do Harry Potter" 
print(mensagem)
-- EXECUTION TIME:
0.213171
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Herry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:00:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Herry Potter"
else:
	mensagem= patrono + "nao eh patrono do Harry Potter" 
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono do herry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:01:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Herry Potter"
else:
	mensagem= patrono + "nao eh patrono do Harry Potter" 
print(mensagem.lower())
-- EXECUTION TIME:
0.21096
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do herry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:01:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Herry Potter"
else:
	mensagem= patrono + "nao eh patrono do Harry Potter" 
print(mensagem.upper())
-- OUTPUT:
CERVO EH PATRONO DO HERRY POTTER
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:01:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Herry Potter"
else:
	mensagem= patrono + "nao eh patrono do Harry Potter" 
print(mensagem.upper())
-- EXECUTION TIME:
0.152158
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
CERVO EH PATRONO DO HERRY POTTER
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
BODENAO EH PATRONO DO HARRY POTTER
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:01:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono="cervo"):
	mensagem= "cervo eh patrono do Herry Potter"
else:
	mensagem= patrono + "nao eh patrono do Harry Potter" 
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if(patrono="cervo"):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:02:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo")
	mensagem= "cervo eh patrono do Herry Potter"
else:
	mensagem= patrono + "nao eh patrono do Harry Potter" 
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if(patrono=="cervo")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:03:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= patrono + "nao eh patrono do Harry Potter" 
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:03:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= patrono + "nao eh patrono do Harry Potter" 
print(mensagem)
-- EXECUTION TIME:
0.235226
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:03:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= patrono + "nao eh patrono do Harry Potter" 
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:03:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= patrono + "nao eh patrono do Harry Potter" 
print(mensagem.lower())
-- EXECUTION TIME:
0.143494
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:04:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= patrono + "nao eh patrono do Harry Potter" 
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:05:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= patrono + "nao eh patrono do Harry Potter" 
print(mensagem)
-- EXECUTION TIME:
0.156245
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:13:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do harry potter"
else:
	mensagem= patrono + "nao eh patrono do harry potter" 
print(mensagem)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:13:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do harry potter"
else:
	mensagem= patrono + "nao eh patrono do harry potter" 
print(mensagem)
-- EXECUTION TIME:
0.12969
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:13:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do harry potter"
else:
	mensagem= patrono + "nao eh patrono do harry potter" 
print(mensagem.upper())
-- OUTPUT:
CERVO EH PATRONO DO HARRY POTTER
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:13:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do harry potter"
else:
	mensagem= patrono + "nao eh patrono do harry potter" 
print(mensagem.upper())
-- EXECUTION TIME:
0.139058
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
CERVO EH PATRONO DO HARRY POTTER
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
BODENAO EH PATRONO DO HARRY POTTER
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:14:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do harry potter"
else:
	mensagem= patrono + "nao eh patrono do harry potter" 
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:14:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do harry potter"
else:
	mensagem= patrono + "nao eh patrono do harry potter" 
print(mensagem.lower())
-- EXECUTION TIME:
0.176738
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:15:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= ("cervo eh patrono do harry potter:")
else:
	mensagem= patrono + ("nao eh patrono do harry potter:")
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:16:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do harry potter:"
else:
	mensagem= patrono + "nao eh patrono do harry potter:"
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:16:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do harry potter"
else:
	mensagem= patrono + "nao_ eh patrono do harry potter"
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:17:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do harry potter"
else:
	mensagem= patrono + "nao_ eh patrono do harry potter"
print(mensagem.lower())
-- EXECUTION TIME:
0.199581
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao_ eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:17:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do harry potter"
else:
	mensagem= patrono +_"nao eh patrono do harry potter"
print(mensagem.lower())
-- ERROR:
File "XXXX", line 8
    mensagem= patrono +_"nao eh patrono do harry potter"
                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:17:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do harry potter"
else:
	mensagem= patrono +_"nao eh patrono do harry potter:"
print(mensagem.lower())
-- ERROR:
File "XXXX", line 8
    mensagem= patrono +_"nao eh patrono do harry potter:"
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:17:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do harry potter"
else:
	mensagem= patrono_"nao eh patrono do harry potter"
print(mensagem.lower())
-- ERROR:
File "XXXX", line 8
    mensagem= patrono_"nao eh patrono do harry potter"
                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:18:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do harry potter"
else:
	mensagem= patrono+_"nao eh patrono do harry potter"
print(mensagem.lower())
-- ERROR:
File "XXXX", line 8
    mensagem= patrono+_"nao eh patrono do harry potter"
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:19:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do harry potter"
else:
	mensagem= patrono+"nao eh patrono do harry potter"
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:19:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= patrono+"nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:20:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= patrono+"nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.193082
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:20:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= patrono+"nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:20:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= patrono+"nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:20:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= patrono+"nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.163137
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:21:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= patrono="nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:21:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= patrono="nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.145943
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:22:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= patrono+" nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:23:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o nome do patrono:")
if(patrono=="cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= patrono+" nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.234893
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
